--- a/Tools/Compilation/SyntaxRewriter/PSharp.vs2017.targets
+++ b/Tools/Compilation/SyntaxRewriter/PSharp.vs2017.targets
@@ -1,4 +1,4 @@
-<Project>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <UsingTask TaskName="Microsoft.PSharp.Rewriter" AssemblyFile=".\PSharpSyntaxRewriter.exe" />
   <Target Name="GenerateToolOutput" BeforeTargets="CoreCompile">
     <Rewriter
